--- a/src/MainLayout/Components/ContactUS/contact.css
+++ b/src/MainLayout/Components/ContactUS/contact.css
@@ -186,7 +186,7 @@
   .connect-us {
     display: block;
 
-    /* height: fit-content; */
+    /* height: 120vh; */
   }
 
   .form-with-info .form {
