--- a/src/MainLayout/footer/footer.css
+++ b/src/MainLayout/footer/footer.css
@@ -133,7 +133,7 @@
 
 @media (min-width: 320px) and (max-width: 680px) {
   #footer {
-    margin-top: 80px;
+    /* margin-top: 80px; */
   }
   .footer-elements {
     display: block;
