--- a/src/MainLayout/Pages/pages.css
+++ b/src/MainLayout/Pages/pages.css
@@ -165,6 +165,7 @@
 
 .swarajya-moments img {
   flex: 30%;
+  border: 0.2rem solid orange;
 }
 .swarajya-moments .moments-info {
   flex: 60%;
@@ -178,15 +179,19 @@
   font-size: 1.5rem;
   font-weight: 600;
   /* color: ; */
-  margin-top: 4%;
+  /* margin-top: 4%; */
   padding: 5px;
   color: rgb(0, 78, 126);
 }
 
 .moments-info p {
   /* margin-top: 5%; */
-  padding: 5px;
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 600;
+  padding: 1%;
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
   .highval-imges {
     margin: 5px 10px 5px 10px;
@@ -224,5 +229,11 @@
   /* --------------------------Founding Story----------------------- */
   .swarajya-moments {
     display: block;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .moment-btn {
+    text-align: center;
   }
 }
