--- a/src/MainLayout/screens/Register/register.css
+++ b/src/MainLayout/screens/Register/register.css
@@ -18,7 +18,7 @@
 }
 
 .login-box-insider {
-  margin-top: 40%;
+  margin-top: 6;
   box-shadow: 10px 10px 143px 0px rgba(0, 0, 0, 0.75) inset;
   -webkit-box-shadow: 10px 10px 143px 0px rgba(0, 0, 0, 0.75) inset;
 
@@ -99,8 +99,11 @@
     display: none;
   }
   .register-box-insider {
-    /* margin-top: 40%; */
     padding: 5%;
+  }
+
+  .login-box-insider {
+    margin-top: 40%;
   }
 
   .mobile-register {
