--- a/src/AdminLayout/Layout2/layout.css
+++ b/src/AdminLayout/Layout2/layout.css
@@ -25,3 +25,44 @@
   padding: 5px;
   cursor: pointer;
 }
+
+/* -------------------------------------Team------------------------------ */
+
+.team-table {
+  /* display: flex;
+  justify-content: center; */
+  width: 80vw;
+  margin: 5% 5% 0 5%;
+}
+
+.team-table table {
+  border: 2px solid black;
+}
+.team-table table thead tr {
+  background-color: bisque;
+}
+.teamtable-heading {
+  width: auto;
+  text-align: center;
+  padding: 10px;
+  border: 2px solid black;
+}
+
+.team-table table tbody tr {
+  text-align: center;
+  border: 2px solid black;
+}
+.team-table table tbody tr td {
+  padding: 10px;
+  text-align: center;
+  border: 2px solid black;
+}
+
+.search-bar {
+  margin: 5% 5% 0 5%;
+}
+
+.search-bar input {
+  font-size: 30px;
+  border-radius: 10px;
+}
