--- a/src/MainLayout/Visions/vision.css
+++ b/src/MainLayout/Visions/vision.css
@@ -15,7 +15,7 @@
   /* text-align: left; */
   font-weight: 800 !important;
 
-  font-size: 25px;
+  font-size: 1.5rem;
 }
 
 .vision-text .heading2 {
