--- a/src/AdminLayout/Profile/profile.css
+++ b/src/AdminLayout/Profile/profile.css
@@ -102,11 +102,15 @@
   margin: 10px;
 }
 
+.form-group-btn {
+  padding-right: 140px;
+  margin-bottom: 15px;
+}
+
 .edit-profile-tab {
-  display: block;
   margin-top: 10px;
   padding: 10px;
-  width: 45%;
+  width: 130%;
   border-radius: 5px;
   font-size: 1rem;
   font-weight: 600;
@@ -130,5 +134,9 @@
 
   .profile-right-tab {
     padding-bottom: 30px;
+  }
+  .form-group-btn {
+    padding-right: 20px;
+    margin-bottom: 15px;
   }
 }
