--- a/src/MainLayout/screens/Password_Reset/rePassword.css
+++ b/src/MainLayout/screens/Password_Reset/rePassword.css
@@ -91,3 +91,71 @@
     margin: 2rem;
   }
 }
+
+/* vhfbvonas */
+
+.homeSlide {
+  position: relative;
+}
+
+.homeSlide {
+  width: 20%;
+  transition: 2s;
+}
+
+.homeSlide img {
+  width: 100vw;
+  height: 100vh;
+}
+
+.st-text {
+  width: 650px;
+  position: absolute;
+  top: 35%;
+  left: 7%;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 700;
+  animation: text-up 12s linear infinite;
+  margin-bottom: 50px;
+}
+
+.st-btn {
+  position: absolute;
+  top: 55%;
+
+  background-color: #f4b124;
+  left: 100px;
+  transition: 0.2s ease-in-out;
+  /* border: 2px solid #f4b124; */
+  border-radius: 17px;
+  cursor: pointer;
+  animation: text-up 12s linear infinite;
+  transform: translateY(100px);
+}
+.st-btn .btn-donateUs {
+  display: block;
+  font-size: 20px;
+  padding: 11px 42px 13px 13px;
+  /* position: relative; */
+}
+
+.st-btn .btn-donateUs .text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  animation: text-up 12s linear infinite;
+}
+.icon {
+  margin: 9px 0px 0 0px;
+  position: absolute;
+  top: 3px;
+}
+.st-btn .btn-donateUs p {
+  color: #fff;
+}
+.icon-heart {
+  color: #fff;
+  margin-left: 6px;
+  font-size: 25px;
+}
