--- a/src/MainLayout/Home/home.css
+++ b/src/MainLayout/Home/home.css
@@ -280,6 +280,22 @@
     border-radius: 17px;
     cursor: pointer;
   }
+  .st-text {
+    width: 90vw;
+    position: absolute;
+    top: 35%;
+    left: 5%;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 50px;
+    animation: text-up 12s linear infinite;
+    margin-bottom: 50px;
+  }
+
+  .st-btn {
+    left: 5%;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 790px) {
