--- a/src/MainLayout/Pages/pages.css
+++ b/src/MainLayout/Pages/pages.css
@@ -1,6 +1,4 @@
 /* -------------------Contribution.jsx--------------------------------- */
-.highval-imges {
-}
 
 .highval-grid {
   text-align: center;
@@ -190,6 +188,53 @@
   color: #504e70;
   font-weight: 600;
   padding: 1%;
+}
+
+/* --------------------------------------Form----------------------------- */
+
+.sendnotice {
+  max-width: 500px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+
+.mail-div {
+  margin-bottom: 15px;
+}
+
+.tomail {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.noticeMail {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.noticeMailRadio {
+  width: 100%;
+  height: 20vh;
+  box-sizing: border-box;
+  padding: 15px;
+  /* margin-bottom: 25px; */
+}
+
+.sendNoticebtn {
+  background-color: #f8b400;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
