--- a/src/MainLayout/Pages/pages.css
+++ b/src/MainLayout/Pages/pages.css
@@ -177,7 +177,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   /* color: ; */
-  /* margin-top: 4%; */
+  /* margin-top: 4px%; */
   padding: 5px;
   color: rgb(0, 78, 126);
 }
@@ -190,14 +190,52 @@
   padding: 1%;
 }
 
-/* --------------------------------------Form----------------------------- */
+/* --------------------------------------Send Mail Form----------------------------- */
+.sendMail {
+  margin: 35px 25px;
+  height: 80vh;
+  display: flex;
+  gap: 50px;
+  justify-content: flex-start;
+}
+.message-menu-grid {
+  display: grid;
+  gap: 25px;
+  grid-template-rows: auto;
+  width: 20%;
+}
+.message-menu-grid .item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 16px;
+  height: 180px;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+  /* background-color: #e4701d; */
+}
+.mail-item-forms h4 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: rgb(0, 78, 126);
+  font-weight: 800;
+}
+.message-menu-grid .active {
+  background-color: #f8b400;
+}
 
 .sendnotice {
-  max-width: 500px;
-  margin: auto;
+  /* display: flex; */
+  width: 60%;
   padding: 20px;
   border: 1px solid #ddd;
   background-color: #fff;
+  font-size: 1rem;
+  color: rgb(0, 78, 126);
+  font-weight: 800;
 }
 
 .mail-div {
@@ -280,5 +318,34 @@
 
   .moment-btn {
     text-align: center;
+  }
+
+  /* --------------------------Send Mail----------------------- */
+  .sendMail {
+    display: block;
+  }
+  .message-menu-grid {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .message-menu-grid .item {
+    box-shadow: none;
+    align-items: normal;
+    height: 0%;
+  }
+  .message-menu-grid .item {
+    color: rgb(0, 78, 126);
+    font-size: 1.2rem;
+    font-weight: 800;
+    margin-bottom: 10px;
+  }
+  .message-menu-grid .active {
+    background-color: white;
+    color: #f8b400;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+  }
+  .sendnotice {
+    width: auto;
   }
 }
