--- a/src/AdminLayout/Layout2/layout.css
+++ b/src/AdminLayout/Layout2/layout.css
@@ -129,11 +129,11 @@
   background-color: antiquewhite;
 }
 
-#accounts {
+/* #accounts {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .about-container p {
   /* margin-top: 50px; */
