loan req , monthly buttons addded

--- a/src/AdminLayout/Accounts/account.css
+++ b/src/AdminLayout/Accounts/account.css
@@ -223,6 +223,7 @@ Dashboard.css
 .account-credits-table-container {
   padding: 20px;
   overflow-y: auto;
+  overflow-x: auto;
   height: 70vh;
   background-color: #f9f9f9;
   position: relative; /* required for z-index context */
